<resources>
    <string name="app_name">ControlIot</string>
    <string name="texto_broker">jajicaiot.ddns.net</string>
    <string name="texto_lista_dispositivos">LIST DEVICES</string>
    <string name="imagen_decorativa">Image decor</string>
    <string name="configurar_broker">Broker</string>
    <string name="instalar_dispositivo">Inst. Device</string>
    <string name="nuevo_dispositivo">New Device</string>
    <string name="broker_no_configurado">No broker</string>
    <string name="nombre_dispositivo">Device name</string>
    <string name="id_dispositivo">Device id</string>
    <string name="menu_item_about">About App</string>
    <string name="about_app_version">App Version: %s</string>
    <string name="aceptar">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="escanear">Scan</string>
    <string name="avisoEliminarDispositivo">The action will delete device.</string>
    <string name="eliminarDispositivo">Delete device</string>
    <string name="esperando_respuesta">Waiting</string>
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
    <string name="sin_repeticion">No repeat</string>
    <string name="main_title">Home</string>

    <string name="esptouch_message_permission">APP require Location permission to get Wi-Fi information. \nClick to request permission</string>
    <string name="esptouch_message_location">Please turn on GPS to get Wi-Fi information.</string>
    <string name="esptouch_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="esptouch_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>

    <string name="esptouch1_title">EspTouch</string>
    <string name="esptouch1_about_version">EspTouch Version: %s</string>
    <string name="esptouch1_ssid_title">SSID: </string>
    <string name="esptouch1_bssid_title">BSSID: </string>
    <string name="esptouch1_password_title">Password: </string>
    <string name="esptouch1_device_count_title">Device count: </string>
    <string name="esptouch1_package_broadcast">Broadcast</string>
    <string name="esptouch1_package_multicast">Multicast</string>
    <string name="esptouch1_confirm">Configure...</string>
    <string name="esptouch1_wifi_5g_message">Device don\'t support 5G Wi-Fi, please make sure the currently connected Wi-Fi is 2.4G, or you can try multicast</string>
    <string name="esptouch1_location_permission_title">⚠️Warning</string>
    <string name="esptouch1_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="esptouch1_configuring_message">Esptouch is configuring, please wait for a moment…</string>
    <string name="esptouch1_configure_wifi_change_message">Wi-Fi disconnected or changed</string>
    <string name="esptouch1_configure_result_failed">EspTouch failed</string>
    <string name="esptouch1_configure_result_failed_port">Create EspTouch task failed, the EspTouch port could be used by other thread</string>
    <string name="esptouch1_configure_result_success">Succesfull!</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>

    <string name="titulo_error_programacion">Program error</string>
    <string name="texto_error_programa">Error, programa exists</string>
    <string name="titulo_error_horas_programa">Error in hours assigment</string>
    <string name="texto_error_horas_programa">The final date must be greater tha initial date</string>


</resources>