<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadPrincipal">

    <TextView
        android:id="@+id/textEstadoBroker"
        android:layout_width="266dp"
        android:layout_height="35dp"
        android:layout_marginEnd="148dp"
        android:text="@string/texto_broker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imageViewEstadoBroker"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageViewEstadoBroker"
        android:layout_width="113dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toEndOf="@+id/textEstadoBroker"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textEstadoBroker"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/bk_conectado"
        android:contentDescription="@string/texto_broker"/>

    <TextView
        android:id="@+id/textListaDispositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_lista_dispositivos"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewImagenDecorativa" />

    <ImageView
        android:id="@+id/imageViewImagenDecorativa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/imagen_decorativa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEstadoBroker"
        android:background="@drawable/fondo_degradado"/>


<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/swipeListaDispositivos"
    android:id="@+id/swipeListaDispositivos">

    <ListView
        android:id="@+id/listViewListaDispositivos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textListaDispositivo">


    </ListView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu_principal" />


</androidx.constraintlayout.widget.ConstraintLayout>